y.output

state 0
	$accept: .expr $end 

	'+'  shift 3
	'-'  shift 4
	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	expr  goto 1
	term  goto 2
	factor  goto 5
	power  goto 6

state 1
	$accept:  expr.$end 

	$end  accept
	.  error


state 2
	expr:  term.    (1)
	term:  term.'+' factor 
	term:  term.'-' factor 

	'+'  shift 10
	'-'  shift 11
	.  reduce 1 (src line 19)


state 3
	expr:  '+'.expr 

	'+'  shift 3
	'-'  shift 4
	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	expr  goto 12
	term  goto 2
	factor  goto 5
	power  goto 6

state 4
	expr:  '-'.expr 

	'+'  shift 3
	'-'  shift 4
	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	expr  goto 13
	term  goto 2
	factor  goto 5
	power  goto 6

state 5
	term:  factor.    (4)
	factor:  factor.'*' power 
	factor:  factor.'/' power 

	'*'  shift 14
	'/'  shift 15
	.  reduce 4 (src line 30)


state 6
	factor:  power.    (7)

	.  reduce 7 (src line 41)


state 7
	power:  CONST.    (10)

	.  reduce 10 (src line 52)


state 8
	power:  VAR.    (11)

	.  reduce 11 (src line 54)


state 9
	power:  '('.expr ')' 

	'+'  shift 3
	'-'  shift 4
	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	expr  goto 16
	term  goto 2
	factor  goto 5
	power  goto 6

state 10
	term:  term '+'.factor 

	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	factor  goto 17
	power  goto 6

state 11
	term:  term '-'.factor 

	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	factor  goto 18
	power  goto 6

state 12
	expr:  '+' expr.    (2)

	.  reduce 2 (src line 21)


state 13
	expr:  '-' expr.    (3)

	.  reduce 3 (src line 25)


state 14
	factor:  factor '*'.power 

	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	power  goto 19

state 15
	factor:  factor '/'.power 

	'('  shift 9
	CONST  shift 7
	VAR  shift 8
	.  error

	power  goto 20

state 16
	power:  '(' expr.')' 

	')'  shift 21
	.  error


state 17
	term:  term '+' factor.    (5)
	factor:  factor.'*' power 
	factor:  factor.'/' power 

	'*'  shift 14
	'/'  shift 15
	.  reduce 5 (src line 32)


state 18
	term:  term '-' factor.    (6)
	factor:  factor.'*' power 
	factor:  factor.'/' power 

	'*'  shift 14
	'/'  shift 15
	.  reduce 6 (src line 36)


state 19
	factor:  factor '*' power.    (8)

	.  reduce 8 (src line 43)


state 20
	factor:  factor '/' power.    (9)

	.  reduce 9 (src line 47)


state 21
	power:  '(' expr ')'.    (12)

	.  reduce 12 (src line 55)


11 terminals, 5 nonterminals
13 grammar rules, 22/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 21/120000
20 extra closures
41 shift entries, 1 exceptions
11 goto entries
11 entries saved by goto default
Optimizer space used: output 30/120000
30 table entries, 6 zero
maximum spread: 11, maximum offset: 15
